Fix Organizer Dashboard Overlap

--- a/app/assets/stylesheets/styles/organizer_dashboard.scss
+++ b/app/assets/stylesheets/styles/organizer_dashboard.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the Organizer_Dashboard controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#user_table{
+  td {
+    word-break: break-all;
+  }
+
+}
